[gd_scene load_steps=10 format=3 uid="uid://ctb7j4rfsnxo1"]

[ext_resource type="Script" path="res://Scripts/mode_sd.gd" id="1_xhr1t"]
[ext_resource type="PackedScene" path="res://Scenes/small_missile.tscn" id="2_7ihu0"]
[ext_resource type="PackedScene" path="res://Scenes/enemy_missile.tscn" id="3_8d3kv"]
[ext_resource type="PackedScene" path="res://Scenes/enemy_ship.tscn" id="4_756ri"]
[ext_resource type="PackedScene" path="res://Scenes/player.tscn" id="6_1lbhg"]
[ext_resource type="PackedScene" path="res://Scenes/hud.tscn" id="6_j8vqy"]
[ext_resource type="AudioStream" uid="uid://ya8gxotbjhyq" path="res://Assets/Audio/player_shoot.ogg" id="7_ps6bh"]
[ext_resource type="AudioStream" uid="uid://doouqv3hq5qs4" path="res://Assets/Audio/enemy_shoot.ogg" id="8_jxrar"]
[ext_resource type="AudioStream" uid="uid://cg2uc87gb6vvx" path="res://Assets/Audio/start.ogg" id="9_f7hbr"]

[node name="SuddenDeathMode" type="Node2D" groups=["menus"]]
script = ExtResource("1_xhr1t")
missile_scene = ExtResource("2_7ihu0")
enemy_missile_scene = ExtResource("3_8d3kv")
enemy_ship_scene = ExtResource("4_756ri")

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="EnemyShootTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="HUD" parent="." instance=ExtResource("6_j8vqy")]
metadata/_edit_horizontal_guides_ = [448.0]

[node name="Player" parent="." instance=ExtResource("6_1lbhg")]
metadata/_edit_vertical_guides_ = [171.0]

[node name="PlayerShootPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_ps6bh")

[node name="EnemyShootPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_jxrar")

[node name="StartPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_f7hbr")

[node name="DifficultyTimer" type="Timer" parent="."]
wait_time = 10.0

[connection signal="timeout" from="EnemyTimer" to="." method="_on_enemy_timer_timeout"]
[connection signal="timeout" from="EnemyShootTimer" to="." method="_on_enemy_shoot_timer_timeout"]
[connection signal="back_pressed" from="HUD" to="." method="_on_hud_back_pressed"]
[connection signal="pause_pressed" from="HUD" to="." method="_on_hud_pause_pressed"]
[connection signal="start_game" from="HUD" to="." method="_on_hud_start_game"]
[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="DifficultyTimer" to="." method="_on_difficulty_timer_timeout"]
